--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>HTML Form Elements</title>
   <meta charset="utf-8" >
-  <meta name="viewport" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css" >
   <link rel="stylesheet" media="screen" href="css/screen.css" >
 </head>
